# vtkCAT

./: .gitignore  CAT_CorrectTopology.cxx  CAT_Image  CAT_Image.cxx  CAT_MarchingCubes.cxx  CAT_SurfInflate.cxx  CAT_SurfSmooth.cxx  CAT_View  CAT_View.cxx  CAT_ViewImage.cxx  CAT_ViewSurf.cxx  CMakeLists.txt  Doxyfile  README.md  mgz2mnc  qt_SurfView.cxx  sources.txt  vtkCustomInteractorStyle.h  vtkStat.cxx  vtkStat.h  vtkSurfaceReader.cxx  vtkSurfaceReader.h  vtkUtils.cxx  vtkUtils.h
CAT_Image.app/Contents/: Info.plist
CAT_View.app/Contents/: Info.plist
deprecated/: CAT_MarchingCubes.cxx  CAT_SurfInflate.cxx  CAT_View.cxx  CMakeLists.txt
deprecated/Doxygen/: doxygen.config.in
deprecated/vtkCAT/: macro.h  vtkBICOBJReader.cxx  vtkBICOBJReader.h  vtkCaretTgtSmoothPolyDataFilter.h  vtkEllipsoidProjectPolyDataFilter.cxx  vtkFreesurferReader.cxx  vtkFreesurferReader.h  vtkGiftiReader.cxx  vtkGiftiReader.h  vtkInflateSmoothPolyData.cxx  vtkInflateSmoothPolyData.h  vtkInteractorStyleCAT.cxx  vtkMINCImageAttributes.cxx  vtkMINCImageWriter.cxx  vtkMetaDataSet.cxx  vtkMetaImageData.cxx  vtkMetaImageData.h  vtkPolyDataCurvature.cxx  vtkPolyDataCurvature.h  vtkSurfaceReader.cxx  vtkSurfaceReader.h
deprecated/vtkRenderingAddOn/: vtkBoxCutPolyLines.cxx  vtkDataSet3DCroppingPlaneCallback.cxx  vtkDataSet3DCroppingPlaneCallback.h  vtkFillImageWithPolyData.h  vtkImage3DImagePlaneCallback.cxx  vtkImageBlendWithMask.cxx  vtkImageBlendWithMask.h  vtkImageOrientedPointWidget.cxx  vtkImageOrientedPointWidgetCallback.h  vtkImageTracerWidgetCallback.cxx  vtkOrientationAnnotation.h  vtkSynchronizedView.cxx  vtkSynchronizedView.h  vtkViewImage.cxx  vtkViewImage2DCommand_orig.cxx  vtkViewImage2DFullCommand.cxx  vtkViewImage2DFullCommand.h  vtkViewImage2DWithOrientedPoint.h
gifticlib/: gifti_io.c  gifti_io.lo  gifti_tool.lo  gifti_xml.lo
lib/: dbh.h  vtkAnalyzeImageReader.cxx  vtkAnalyzeRawReader.cxx  vtkBICOBJReader.cxx  vtkBICOBJReader.h  vtkCorrectTopologyPolyData.cxx  vtkCorrectTopologyPolyData.h  vtkFreesurferReader.cxx  vtkFreesurferReader.h  vtkInflateSmoothPolyData.cxx  vtkInteractorStyleCAT.cxx  vtkInteractorStyleTrackballCameraCAT.cxx  vtkInteractorStyleTrackballCameraCAT.h  vtkMINCImageReader.h  vtkPointNeighborsHelper.h  vtkPointTopologyHelper.cxx  vtkPolyDataDistortion.h  vtkScalarBarWidgetCAT.cxx  vtkScalarBarWidgetCAT.h  vtkSurfaceReader.cxx  vtkSurfaceReader.h  vtkVolumeAnalyzeReader.cxx
lib/topologysimplification/: Face.cpp  FastLoop.cpp  FastLoop.h  Loop.cpp  PatchDisk.cpp  PatchDisk.h  Segment.cpp  Surface.cpp  SurfaceVtk.cpp  SurfaceVtk.h  Vertex.cpp  Vertex.h
qt_SurfView/: qt_SurfView.cxx  qt_SurfView.pro
vtkCAT/: vtkAnalyzeImageReader.h  vtkAnalyzeRawReader.h  vtkBICOBJReader.cxx  vtkCaretTgtSmoothPolyDataFilter.cxx  vtkCaretTgtSmoothPolyDataFilter.h  vtkEllipsoidProjectPolyDataFilter.cxx  vtkEllipsoidProjectPolyDataFilter.h  vtkFreesurferReader.cxx  vtkGiftiReader.cxx  vtkGiftiReader.h  vtkInflateSmoothPolyData.cxx  vtkInteractorStyleCAT.cxx  vtkInteractorStyleCAT.h  vtkMINC.h  vtkMINCImageAttributes.cxx  vtkMINCImageReader.cxx  vtkMINCImageWriter.cxx  vtkMINCImageWriter.h  vtkMetaDataSet.cxx  vtkMetaDataSet.h  vtkMetaImageData.cxx  vtkMetaImageData.h  vtkPointNeighborsHelper.cxx  vtkPointTopologyHelper.cxx  vtkPointTopologyHelper.h  vtkPolyDataCurvature.cxx  vtkPolyDataDistortion.cxx  vtkScalarBarWidgetCAT.cxx  vtkScalarBarWidgetCAT.h  vtkSurfaceReader.cxx  vtkSurfaceReader.h  vtkUtilities.cxx  vtkUtilities.h  vtkVolumeAnalyzeReader.h  vtkVolumeRawReader.cxx  vtkVolumeRawReader.h
vtkRenderingAddOn/: CMakeLists.txt  vtkBoxCutPolyLines.cxx  vtkBoxCutPolyLines.h  vtkDataSet3DCroppingPlaneCallback.cxx  vtkDataSet3DCroppingPlaneCallback.h  vtkFillImageWithPolyData.cxx  vtkFillImageWithPolyData.h  vtkINRIA3DConfigure.h  vtkImage3DCroppingBoxCallback.cxx  vtkImage3DCroppingBoxCallback.h  vtkImage3DImagePlaneCallback.cxx  vtkImage3DImagePlaneCallback.h  vtkImageBlendWithMask.cxx  vtkImageBlendWithMask.h  vtkImageOrientedPointWidget.cxx  vtkImageOrientedPointWidget.h  vtkImageOrientedPointWidgetCallback.cxx  vtkImageOrientedPointWidgetCallback.h  vtkImageTracerWidgetCallback.cxx  vtkImageTracerWidgetCallback.h  vtkInteractorStyleImage2D.cxx  vtkInteractorStyleImage2D.h  vtkOrientationAnnotation.cxx  vtkOrientationAnnotation.h  vtkSynchronizedView.cxx  vtkSynchronizedView.h  vtkViewImage.cxx  vtkViewImage.h  vtkViewImage2D.cxx  vtkViewImage2D.h  vtkViewImage2DCommand.cxx  vtkViewImage2DCommand.h  vtkViewImage2DFullCommand.cxx  vtkViewImage2DFullCommand.h  vtkViewImage2DWithOrientedPoint.cxx  vtkViewImage2DWithOrientedPoint.h  vtkViewImage2DWithTracer.cxx  vtkViewImage2DWithTracer.h  vtkViewImage2D_orig.cxx  vtkViewImage3D.cxx  (+1 more)
zlib/: adler32.lo  compress.lo  crc32.lo  deflate.lo  gzio.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  trees.lo  uncompr.lo  zutil.lo
